--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,12 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v4
-
+        uses: actions/checkout@v6
+      - uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+          cache: 'pip'
+      - run: pip install -r requirements.txt
       - name: Install elan
         run: |
           set -o pipefail
